Поднял версию jdt и адаптировал код к Java 11